# AlexNet_ComputeLibrary

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/chenleiblogs/mlopencl/ml_opencl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: alexnet_neon.cpp  alexnet_opencl.cpp  native-lib.cpp
app/src/main/java/com/chenleiblogs/mlopencl/ml_opencl/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/chenleiblogs/mlopencl/ml_opencl/: ExampleUnitTest.java
app/test_helpers/: Utils.cpp  Utils.h
gradle/wrapper/: gradle-wrapper.properties
